--- a/package.json
+++ b/package.json
@@ -15,11 +15,20 @@
     "security:audit": "npm audit --audit-level high",
     "security:snyk": "snyk test",
     "security:snyk:monitor": "snyk monitor",
+    "security:scan": "node scripts/security-scan.js",
+    "security:lint": "npm run lint -- --format=json --output-file=security-lint-results.json",
+    "security:report": "node scripts/generate-security-report.js",
+    "security:install": "npm install --save-dev @snyk/cli audit-ci",
+    "security:full": "npm run security:scan && npm run security:audit",
+    "security:precommit": "npm run security:lint && npm run security:audit",
+    "security:validate": "node scripts/validate-security-gates.js",
     "prepare": "husky",
     "semantic-release": "semantic-release",
     "backup": "node scripts/backup-data.js",
     "restore": "node scripts/restore-data.js",
-    "validate-data": "node scripts/validate-data.js"
+    "validate-data": "node scripts/validate-data.js",
+    "build:fast": "next build --no-lint --no-type-check",
+    "dev:fast": "next dev --turbo"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -31,8 +40,10 @@
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "^10.29.0",
+    "@sentry/replay": "^7.116.0",
     "@types/redis": "^4.0.10",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
@@ -56,10 +67,7 @@
     "@axe-core/playwright": "^4.11.0",
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
-    "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.57.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -72,10 +80,9 @@
     "cross-env": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.6",
+    "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.7",
     "jsdom": "^27.3.0",
-    "semantic-release": "^25.0.2",
-    "semantic-release-github": "^5.0.1",
     "snyk": "^1.1301.1",
     "tailwindcss": "^4",
     "typescript": "^5",
